Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1231,7 +1231,7 @@ fieldset {
     #herobtn {
         flex-direction: row;
         gap: 20px;
-        justify-content: center;
+        justify-content: flex-start;
     }
     .resumediv {
         width: 140px;
@@ -1309,7 +1309,7 @@ fieldset {
     #herobtn {
         flex-direction: row;
         gap: 30px;
-        justify-content: center;
+        justify-content: flex-start;
     }
     .resumediv {
         width: 160px;
